--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -328,8 +328,8 @@ input, select, textarea {
 		margin: 0 0 1.5rem 0;
 	}
 
-	modal-body p {
-		color: rgba(0, 0, 0, 0.875);
+	modal-body, p {
+		color: rgba(0, 0, 0, 1);
 		margin: 0 0 1.5rem 0;
 	}
 
