--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -324,7 +324,6 @@ input, select, textarea {
 	}
 
 	p {
-		color: rgba(255, 255, 255, 0.875);
 		margin: 0 0 1.5rem 0;
 	}
 
@@ -457,11 +456,6 @@ input, select, textarea {
 		border: 0;
 		border-bottom: solid 2px rgba(255, 255, 255, 0.25);
 		margin: 1.875rem 0;
-	}
-
-	.modal-body p {
-		color: rgba(0, 0, 0, 1);
-		margin: 0 0 1.5rem 0;
 	}
 
 	.align-left {
@@ -1495,6 +1489,16 @@ input, select, textarea {
 		text-transform: uppercase;
 		white-space: nowrap;
 	}
+.modal-backdrop {
+    opacity: 0;
+	transition: opacity .2s;
+}
+.modal-backdrop.in {
+	opacity: .7;
+}
+.modal-backdrop {
+	background-color: none !important;
+}
 
 		input[type="submit"]:hover,
 		input[type="reset"]:hover,
@@ -3671,62 +3675,3 @@ input, select, textarea {
 			}
 
 	}
-
-/* Popup box BEGIN */
-.hover_bkgr_fricc{
-    background:rgba(0,0,0,.4);
-    cursor:pointer;
-    display:none;
-    height:100%;
-    position:fixed;
-    text-align:center;
-    top:0;
-    width:100%;
-    z-index:10000;
-}
-.hover_bkgr_fricc .helper{
-    display:inline-block;
-    height:100%;
-    vertical-align:middle;
-}
-.hover_bkgr_fricc > div {
-    background-color: #fff;
-    box-shadow: 10px 10px 60px #555;
-    display: inline-block;
-    height: auto;
-    max-width: 551px;
-    min-height: 100px;
-    vertical-align: middle;
-    width: 60%;
-    position: relative;
-    border-radius: 8px;
-    padding: 15px 5%;
-}
-.popupCloseButton {
-    background-color: #fff;
-    border: 3px solid #999;
-    border-radius: 50px;
-    cursor: pointer;
-    display: inline-block;
-    font-family: arial;
-    font-weight: bold;
-    position: absolute;
-    top: -20px;
-    right: -20px;
-    font-size: 25px;
-    line-height: 30px;
-    width: 30px;
-    height: 30px;
-    text-align: center;
-}
-.popupCloseButton:hover {
-    background-color: #ccc;
-}
-.trigger_popup_fricc {
-    cursor: pointer;
-    font-size: 20px;
-    margin: 20px;
-    display: inline-block;
-    font-weight: bold;
-}
-/* Popup box BEGIN */
